probado hasta el caso de uso 6 funcionan